--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
   "name": "grocery-list-guru",
   "version": "1.0.0",
-  "description": "orginizes a gorcery list into aisles",
+  "description": "",
   "main": "index.js",
-  "scripts": {
-    "react-start": "webpack serve"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/coltonmedlin/rpt27-mvp.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/coltonmedlin/rpt27-mvp/issues"
+  "scripts": {
+    "react-build-dev": "webpack --mode development",
+    "react-build-prod": "webpack --mode production",
+    "react-start": "webpack serve --hot --mode development"
   },
-  "homepage": "https://github.com/coltonmedlin/rpt27-mvp#readme",
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hot-loader": "^4.13.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.14",
-    "@babel/preset-env": "^7.13.12",
+    "webpack": "^5.31.0",
+    "webpack-cli": "^4.6.0",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
-    "html-webpack-plugin": "^5.3.1",
-    "webpack": "^5.30.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@hot-loader/react-dom": "^17.0.1+4.13.0",
+    "webpack-dev-server": "^3.11.2",
+    "css-loader": "^5.2.0",
+    "style-loader": "^2.0.0",
+    "eslint": "^7.23.0",
+    "eslint-plugin-react": "^7.23.1"
   }
 }
