--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^5.12.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0"
+    "react-hot-loader": "^4.13.0",
+    "react-html-parser": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
